@@ -1,0 +1,14 @@
+
+/*
+ * Copyright (C) 2012 Archie L. Cobbs. All rights reserved.
+ *
+ * $Id$
+ */
+
+/**
+ * Classes that facilitate connecting Vaadin to {@link org.dellroad.stuff.pobj.PersistentObject}s.
+ *
+ * @see org.dellroad.stuff.pobj
+ * @see org.dellroad.stuff.vaadin7
+ */
+package org.dellroad.stuff.pobj.vaadin;
