@@ -1,6 +1,7 @@
 
 Version Next
 
+    - Added "vaadin" sub-package of org.dellroad.stuff.pobj
     - Added @ProvidesProperty annotation and container constructor support
     - Added new method Primitive.getDefaultValue()
     - Fixed bug in AbstractUnsizedContainer
